--- a/Home.html
+++ b/Home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +16,7 @@
 
     <nav>
         <ul>
-            <li><a href="#Hakımda">Hakkımda</a></li>
+            <li><a href="Hakimda.html">Hakkımda</a></li>
             <li><a href="#projeler">Projeler</a></li>
             <li><a href="#iletisim">İletişim</a></li>
         </ul>
