--- a/Home.html
+++ b/Home.html
@@ -16,7 +16,7 @@
 
     <nav>
         <ul>
-            <li><a href="Hakimda.html">Hakkımda</a></li>
+            <li><a href="Hakımda.html">Hakkımda</a></li>
             <li><a href="#projeler">Projeler</a></li>
             <li><a href="#iletisim">İletişim</a></li>
         </ul>
