--- a/Hakimda.html
+++ b/Hakimda.html
@@ -16,6 +16,7 @@
 
     <nav>
         <ul>
+            <li><a href="Home.html">Projeler</a></li>
             <li><a href="#hakkimda">Hakkımda</a></li>
             <li><a href="#projeler">Projeler</a></li>
             <li><a href="#iletisim">İletişim</a></li>
