--- a/İletisim.html
+++ b/İletisim.html
@@ -78,7 +78,7 @@
                                 <a href="https://www.youtube.com/channel/UCXThG5E8N7uFaCY1UvNdXAg" target="_blank">
                                   <img src="assets/icon/youtube.png" alt="youtube" width="30" height="30">
                                 </a>
-                                <a href="https://twitter.com/bayramtaskn6" target="_blank">
+                                <a href="https://twitter.com/bayyram33" target="_blank">
                                   <img src="assets/icon/twitter.png" alt="Twitter" width="30" height="30">
                                 </a>
                                 <a href="https://www.instagram.com/bayyram.33/" target="_blank">
