--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                         <li class="nav-item"><a class="nav-link" href="index.html">AnaSayfa</a></li>
                         <li class="nav-item"><a class="nav-link" href="Hakımda.html">Hakımda</a></li>
                         <li class="nav-item"><a class="nav-link" href="İletisim.html">İletişim</a></li>
+                        <li class="nav-item"><a class="nav-link" href="kvkk.html">kvkk</a></li>
                     </ul>
                 </div>
             </div>
